# reps

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  reps  run.sh
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/authoring-drills/: SKILL.md
assets/: README.md
backend/: agent.py  app.py  harness.py  reps_cli.py  verify_drill.py  worker.py
backend/drills/: __init__.py  banking.py  coin-change.py  filesystem.py  inventory.py  job-scheduler.py  kvstore.py  longest-substring.py  lru-cache.py  memory-db.py  merge-intervals.py  num-islands.py  rate-limiter.py  search-rotated.py  trapping-rain-water.py  two-sum.py  valid-parentheses.py  versioned-bucket.py
docs/: filesystem-walkthrough.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  Coach.jsx  Menu.jsx  Results.jsx  Settings.jsx  Workbench.jsx  api.js  styles.css  ui.jsx
skills/authoring-drills/: SKILL.md
