[project]
name = "reps"
version = "0.3.1.1"
description = "Interview-practice harness — progressive coding drills, a real editor, and an agent coach that generates & explains problems from the web UI"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rrrozhd" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "markdown>=3.5",
    "pyflakes>=3.2",
]

[tool.uvicorn]
# convenience only; run.sh is the entrypoint
